<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <View
        android:id="@+id/view_setPw"
        android:layout_width="314dp"
        android:layout_height="537dp"
        android:background="#99020202"
        app:layout_constraintBottom_toTopOf="@+id/horizontal2"
        app:layout_constraintEnd_toStartOf="@+id/vertical4"
        app:layout_constraintStart_toStartOf="@+id/vertical1"
        app:layout_constraintTop_toTopOf="@+id/horizontal1" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="60dp"
        android:text="@string/set_3"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/view_setPw"
        app:layout_constraintTop_toBottomOf="@+id/setNewPw" />

    <Button
        android:id="@+id/btn_savePw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/Save_pw"
        app:layout_constraintEnd_toEndOf="@+id/view_setPw"
        app:layout_constraintTop_toBottomOf="@+id/confirmNewPw" />

    <Button
        android:id="@+id/btn_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@android:string/cancel"
        app:layout_constraintEnd_toStartOf="@+id/btn_savePw"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/view_setPw"
        app:layout_constraintTop_toBottomOf="@+id/confirmNewPw" />

    <EditText
        android:id="@+id/setNewPw"
        android:layout_width="185dp"
        android:layout_height="49dp"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:inputType="numberPassword"
        android:textColor="#FFFFFF"
        android:singleLine="true"
        app:backgroundTint="#FFFFFF"
        app:layout_constraintEnd_toStartOf="@+id/vertical3"
        app:layout_constraintStart_toStartOf="@+id/vertical2"
        app:layout_constraintTop_toBottomOf="@+id/txt_note" />

    <EditText
        android:id="@+id/confirmNewPw"
        android:layout_width="185dp"
        android:layout_height="49dp"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:inputType="numberPassword"
        android:textColor="#FFFFFF"
        android:singleLine="true"
        app:backgroundTint="#FFFFFF"
        app:layout_constraintEnd_toStartOf="@+id/vertical3"
        app:layout_constraintStart_toStartOf="@+id/vertical2"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/txt_note"
        android:layout_width="298dp"
        android:layout_height="36dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:text="@string/set_2"
        android:textColor="#FFFFFF"
        app:layout_constraintStart_toStartOf="@+id/view_setPw"
        app:layout_constraintTop_toBottomOf="@+id/txt_setPw" />

    <TextView
        android:id="@+id/txt_setPw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="32dp"
        android:text="@string/set_1"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/view_setPw"
        app:layout_constraintTop_toTopOf="@+id/view_setPw" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/vertical1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/vertical2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.25" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/vertical3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.75" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/vertical4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.9" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/horizontal1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/horizontal2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.9" />


</androidx.constraintlayout.widget.ConstraintLayout>